[gd_scene load_steps=3 format=3 uid="uid://bjxlplnjacyae"]

[ext_resource type="Script" path="res://scripts/UI/calendar_arrow_ui.gd" id="1_1ktj7"]
[ext_resource type="Texture2D" uid="uid://clu2id2a758qa" path="res://icon.svg" id="1_kwcro"]

[node name="CalendarArrowUI" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
script = ExtResource("1_1ktj7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -40.5
offset_right = 40.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kwcro")
expand_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
